test/testdata/classes/methods/class/invalid_unary_op_error.lox
class Foo {
  class bar() {}
}
-Foo.bar; // error: '-' operator cannot be used with type 'function'
